[gd_scene load_steps=22 format=3 uid="uid://xbu57lkb77xa"]

[ext_resource type="Script" path="res://scripts/animals/state_machine/animal.gd" id="1_1sxch"]
[ext_resource type="Texture2D" uid="uid://r3xl0phwtuud" path="res://assets/creatures/rabbit_sheet.png" id="2_j17p5"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/state_machine.gd" id="2_yl4r7"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/frightened.gd" id="3_8t8pi"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/idle.gd" id="4_otxx3"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/open.gd" id="5_rgdlx"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/chomp.gd" id="6_j1x1f"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/satisfied.gd" id="8_c8hpr"]
[ext_resource type="Script" path="res://scripts/animals/state_machine/states/fleeing.gd" id="10_1t8pc"]
[ext_resource type="Texture2D" uid="uid://bymvjbvvp4yny" path="res://assets/UI/Hearts.png" id="10_cuvde"]
[ext_resource type="Texture2D" uid="uid://cl3nosytxk34t" path="res://assets/UI/Angry lighting.png" id="11_s4pgr"]

[sub_resource type="Animation" id="Animation_38stx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(1, -91, 79, -89, 130, -80, 153, -18, 150, 28, 109, 59, 33, 73, 12, 114, 29, 163, 8, 175, 2, 130, -25, 142, -27, 185, -52, 189, -44, 153, -109, 165, -102, 186, -125, 194, -136, 163, -188, 120, -236, 124, -297, 50, -295, -60, -245, 23, -216, 37, -197, 60, -174, 97, -119, 93, -58, 68, -75, -28, -51, -49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rddwh"]
resource_name = "chewing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(32, -86, 33, -41, 35, -7, 52, 96, 38, 122, 57, 169, 36, 179, 27, 136, 0, 147, -3, 188, -21, 195, -17, 156, -83, 167, -80, 191, -97, 197, -108, 164, -146, 136, -191, 154, -247, 149, -284, 120, -309, 76, -314, 32, -274, 53, -231, 66, -194, 71, -174, 83, -156, 104, -89, 94, -33, 63, -35, -29, -17, -47), PackedVector2Array(17, -60, 74, -101, 149, -51, 159, 12, 142, 56, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}

[sub_resource type="Animation" id="Animation_nytu0"]
resource_name = "chomp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(32, -86, 33, -41, 35, -7, 52, 96, 38, 122, 57, 169, 36, 179, 27, 136, 0, 147, -3, 188, -21, 195, -17, 156, -83, 167, -80, 191, -97, 197, -108, 164, -146, 136, -191, 154, -247, 149, -284, 120, -309, 76, -314, 32, -274, 53, -231, 66, -194, 71, -174, 83, -156, 104, -89, 94, -33, 63, -35, -29, -17, -47)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t667i"]
resource_name = "flee"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-400, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1w5cp"]
resource_name = "frightened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-51, -97, 35, -101, 90, -90, 118, -1, 100, 27, 72, 40, 0, 60, -27, 92, -18, 154, -32, 159, -41, 121, -68, 126, -72, 174, -91, 171, -86, 134, -151, 153, -144, 182, -169, 182, -180, 147, -216, 102, -267, 85, -285, 7, -222, -105, -220, -21, -190, 44, -196, 83, -128, 72, -92, 54, -101, -40, -75, -65)]
}

[sub_resource type="Animation" id="Animation_thdp5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(1, -91, 79, -89, 130, -80, 153, -18, 150, 28, 109, 59, 33, 73, 12, 114, 29, 163, 8, 175, 2, 130, -25, 142, -27, 185, -52, 189, -44, 153, -109, 165, -102, 186, -125, 194, -136, 163, -188, 120, -236, 124, -297, 50, -295, -60, -245, 23, -216, 37, -197, 60, -174, 97, -119, 93, -58, 68, -75, -28, -51, -49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s44qc"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(4, -92, 14, -50, 4, -5, 22, 82, 14, 122, 29, 170, 8, 182, 1, 139, -27, 148, -31, 192, -52, 194, -45, 157, -106, 169, -102, 194, -125, 200, -133, 167, -165, 144, -188, 124, -235, 128, -262, 117, -292, 62, -291, -54, -269, -6, -226, 32, -193, 46, -182, 95, -119, 93, -56, 66, -54, -33, -35, -44)]
}

[sub_resource type="Animation" id="Animation_w67g4"]
resource_name = "satisfied"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(1, -91, 79, -89, 130, -80, 153, -18, 150, 28, 109, 59, 33, 73, 12, 114, 29, 163, 8, 175, 2, 130, -25, 142, -27, 185, -52, 189, -44, 153, -109, 165, -102, 186, -125, 194, -136, 163, -188, 120, -236, 124, -297, 50, -295, -60, -245, 23, -216, 37, -197, 60, -174, 97, -119, 93, -58, 68, -75, -28, -51, -49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7on56"]
_data = {
"RESET": SubResource("Animation_38stx"),
"chewing": SubResource("Animation_rddwh"),
"chomp": SubResource("Animation_nytu0"),
"flee": SubResource("Animation_t667i"),
"frightened": SubResource("Animation_1w5cp"),
"idle": SubResource("Animation_thdp5"),
"open": SubResource("Animation_s44qc"),
"satisfied": SubResource("Animation_w67g4")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3lxpd"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 203.12
initial_velocity_max = 203.12
gravity = Vector3(0, 98, 0)

[node name="Animal" type="AnimatableBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1sxch")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_j17p5")
hframes = 4
frame = 1

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7on56")
}

[node name="CalmTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ChompTImer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "flee_state")]
script = ExtResource("2_yl4r7")
starting_state = NodePath("Idle")
flee_state = NodePath("Flee")

[node name="Frightened" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("3_8t8pi")
idle_state = NodePath("../Idle")
animation_name = "frightened"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("frightened_state", "open_state")]
script = ExtResource("4_otxx3")
frightened_state = NodePath("../Frightened")
open_state = NodePath("../Open")
animation_name = "idle"

[node name="Open" type="Node" parent="StateMachine" node_paths=PackedStringArray("chomp_state")]
script = ExtResource("5_rgdlx")
chomp_state = NodePath("../Chomp")
animation_name = "open"

[node name="Chomp" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "satisfied_state")]
script = ExtResource("6_j1x1f")
idle_state = NodePath("../Idle")
satisfied_state = NodePath("../Satisfied")
animation_name = "chomp"

[node name="Satisfied" type="Node" parent="StateMachine"]
script = ExtResource("8_c8hpr")
animation_name = "satisfied"

[node name="Flee" type="Node" parent="StateMachine"]
script = ExtResource("10_1t8pc")
animation_name = "flee"

[node name="TouchCollider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="TouchPolygon" type="CollisionPolygon2D" parent="TouchCollider"]
polygon = PackedVector2Array(1, -91, 79, -89, 130, -80, 153, -18, 150, 28, 109, 59, 33, 73, 12, 114, 29, 163, 8, 175, 2, 130, -25, 142, -27, 185, -52, 189, -44, 153, -109, 165, -102, 186, -125, 194, -136, 163, -188, 120, -236, 124, -297, 50, -295, -60, -245, 23, -216, 37, -197, 60, -174, 97, -119, 93, -58, 68, -75, -28, -51, -49)

[node name="FeedCollider2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="FeedPolygon2" type="CollisionPolygon2D" parent="FeedCollider2"]
polygon = PackedVector2Array(212, -55, 63, -21, 28, 72, 173, 106, 246, 51, 253, -19)
disabled = true

[node name="PhysicalCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(12, -79, 66, -104, 133, -74, 169, -30, 156, 42, 147, 64, 176, 106, 161, 203, 130, 244, 151, 286, 189, 296, 174, 320, 77, 326, 40, 278, -3, 296, 34, 310, -2, 326, -101, 317, -143, 282, -192, 244, -232, 221, -234, 186, -196, 165, -242, 101, -236, 41, -210, 39, -138, 43, -96, 59, 3, 32, -6, -5, -89, 8, -160, -27, -149, -63, -122, -43, -13, -50)
disabled = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(68, -67)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_3lxpd")
texture = ExtResource("10_cuvde")

[node name="AngryGPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(70, -67)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_3lxpd")
texture = ExtResource("11_s4pgr")
one_shot = true

[connection signal="body_entered" from="FeedCollider2" to="." method="_on_feed_collider_2_body_entered"]
